# ACE6313_T2520

./: .gitignore  pyproject.toml
exercises/Chapter_1/: exercise_1.ipynb
exercises/Chapter_2/: exercise_2a.ipynb  exercise_2b.ipynb  exercise_2c.ipynb
