[project]
name = "ace6313-t2520"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "mlxtend>=0.23.4",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "yellowbrick>=1.5",
]
